<resources>
    <string name="app_name">CiRestoIo</string>
    <string name="desc">Apri la fotocamera e fotografa le banconote</string>
    <string name="img">ImageCapture</string>
    <string name="logo">Logo</string>
    <string name="foto">Apri fotocamera</string>
    <string name="stat1">\tBanconote rilevate: </string>
    <string name="stat2">\tTagli rilevati: </string>
    <string name="stat3">\tInserire l\'importo da pagare: </string>
    <string name="stat4">\tImporto rilevato: </string>
    <string name="stat5">\tSelezionare la valuta: </string>
    <string name="calcola">Calcola</string>
    <string name="ripeti">Ripeti</string>


</resources>